--- a/vui_notebook.ipynb
+++ b/vui_notebook.ipynb
@@ -71,10 +71,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: numpy==1.21 in /Users/carlos/miniforge3/lib/python3.9/site-packages (from -r requirements.txt (line 1)) (1.21.0)\r\n",
-      "Requirement already satisfied: numba==0.55.2 in /Users/carlos/miniforge3/lib/python3.9/site-packages (from -r requirements.txt (line 2)) (0.55.2)\r\n",
-      "Requirement already satisfied: setuptools in /Users/carlos/miniforge3/lib/python3.9/site-packages (from numba==0.55.2->-r requirements.txt (line 2)) (60.10.0)\r\n",
-      "Requirement already satisfied: llvmlite<0.39,>=0.38.0rc1 in /Users/carlos/miniforge3/lib/python3.9/site-packages (from numba==0.55.2->-r requirements.txt (line 2)) (0.38.1)\r\n"
+      "\u001b[31mERROR: Invalid requirement: 'numba==0.55pip in.2' (from line 3 of requirements.txt)\u001b[0m\u001b[31m\r\n",
+      "\u001b[0m"
      ]
     }
    ],
@@ -85,197 +83,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Package                  Version\r\n",
-      "------------------------ -------------------\r\n",
-      "absl-py                  1.0.0\r\n",
-      "appdirs                  1.4.4\r\n",
-      "appnope                  0.1.2\r\n",
-      "argon2-cffi              21.3.0\r\n",
-      "argon2-cffi-bindings     21.2.0\r\n",
-      "asttokens                2.0.5\r\n",
-      "astunparse               1.6.3\r\n",
-      "attrs                    21.4.0\r\n",
-      "AudioConverter           0.4.1\r\n",
-      "audioread                2.1.9\r\n",
-      "backcall                 0.2.0\r\n",
-      "beautifulsoup4           4.11.1\r\n",
-      "bleach                   4.1.0\r\n",
-      "Bottleneck               1.3.4\r\n",
-      "brotlipy                 0.7.0\r\n",
-      "cachetools               5.0.0\r\n",
-      "certifi                  2022.5.18.1\r\n",
-      "cffi                     1.15.1\r\n",
-      "charset-normalizer       2.0.12\r\n",
-      "click                    8.0.4\r\n",
-      "colorama                 0.4.4\r\n",
-      "conda                    4.12.0\r\n",
-      "conda-package-handling   1.8.0\r\n",
-      "cryptography             36.0.2\r\n",
-      "cycler                   0.11.0\r\n",
-      "debugpy                  1.5.1\r\n",
-      "decorator                5.1.1\r\n",
-      "defusedxml               0.7.1\r\n",
-      "dill                     0.3.4\r\n",
-      "entrypoints              0.4\r\n",
-      "et-xmlfile               1.1.0\r\n",
-      "executing                0.8.3\r\n",
-      "fastjsonschema           2.15.1\r\n",
-      "flatbuffers              2.0\r\n",
-      "fonttools                4.25.0\r\n",
-      "future                   0.18.2\r\n",
-      "gast                     0.5.3\r\n",
-      "gensim                   4.2.0\r\n",
-      "google-auth              2.6.6\r\n",
-      "google-auth-oauthlib     0.4.6\r\n",
-      "google-pasta             0.2.0\r\n",
-      "googleapis-common-protos 1.56.0\r\n",
-      "graphviz                 0.20\r\n",
-      "grpcio                   1.42.0\r\n",
-      "h5py                     3.6.0\r\n",
-      "idna                     3.3\r\n",
-      "importlib-metadata       4.11.3\r\n",
-      "install                  1.3.5\r\n",
-      "ipykernel                6.9.1\r\n",
-      "ipython                  8.2.0\r\n",
-      "ipython-genutils         0.2.0\r\n",
-      "ipywidgets               7.6.5\r\n",
-      "jedi                     0.18.1\r\n",
-      "Jinja2                   3.0.3\r\n",
-      "joblib                   1.1.0\r\n",
-      "jsonschema               4.4.0\r\n",
-      "jupyter                  1.0.0\r\n",
-      "jupyter-client           7.2.2\r\n",
-      "jupyter-console          6.4.3\r\n",
-      "jupyter-core             4.9.2\r\n",
-      "jupyterlab-pygments      0.1.2\r\n",
-      "jupyterlab-widgets       1.0.0\r\n",
-      "jupyterthemes            0.20.0\r\n",
-      "keras                    2.8.0\r\n",
-      "Keras-Preprocessing      1.1.2\r\n",
-      "kiwisolver               1.3.2\r\n",
-      "lesscpy                  0.15.0\r\n",
-      "libclang                 13.0.0\r\n",
-      "librosa                  0.9.2\r\n",
-      "llvmlite                 0.38.1\r\n",
-      "Markdown                 3.3.6\r\n",
-      "MarkupSafe               2.0.1\r\n",
-      "matplotlib               3.5.1\r\n",
-      "matplotlib-inline        0.1.2\r\n",
-      "mistune                  0.8.4\r\n",
-      "munkres                  1.1.4\r\n",
-      "nbclient                 0.5.13\r\n",
-      "nbconvert                6.4.4\r\n",
-      "nbformat                 5.3.0\r\n",
-      "nest-asyncio             1.5.5\r\n",
-      "networkx                 2.7.1\r\n",
-      "nltk                     3.7\r\n",
-      "notebook                 6.4.8\r\n",
-      "numba                    0.55.2\r\n",
-      "numexpr                  2.8.1\r\n",
-      "numpy                    1.21.0\r\n",
-      "oauthlib                 3.2.0\r\n",
-      "openpyxl                 3.0.9\r\n",
-      "opt-einsum               3.3.0\r\n",
-      "packaging                21.3\r\n",
-      "pandas                   1.4.2\r\n",
-      "pandocfilters            1.5.0\r\n",
-      "parso                    0.8.3\r\n",
-      "patsy                    0.5.2\r\n",
-      "pexpect                  4.8.0\r\n",
-      "pickleshare              0.7.5\r\n",
-      "Pillow                   9.0.1\r\n",
-      "pip                      22.0.4\r\n",
-      "plotly                   5.8.1\r\n",
-      "ply                      3.11\r\n",
-      "pomegranate              0.14.8\r\n",
-      "pooch                    1.6.0\r\n",
-      "prometheus-client        0.13.1\r\n",
-      "promise                  2.3\r\n",
-      "prompt-toolkit           3.0.20\r\n",
-      "protobuf                 3.20.1\r\n",
-      "ptyprocess               0.7.0\r\n",
-      "pure-eval                0.2.2\r\n",
-      "pyasn1                   0.4.8\r\n",
-      "pyasn1-modules           0.2.8\r\n",
-      "pycosat                  0.6.3\r\n",
-      "pycparser                2.21\r\n",
-      "pydot                    1.4.2\r\n",
-      "pydub                    0.25.1\r\n",
-      "Pygments                 2.11.2\r\n",
-      "pyOpenSSL                22.0.0\r\n",
-      "pyparsing                3.0.4\r\n",
-      "PyQt5                    5.15.2\r\n",
-      "PyQt5_sip                4.19.25\r\n",
-      "PyQtChart                5.15.2\r\n",
-      "pyrsistent               0.18.0\r\n",
-      "PySocks                  1.7.1\r\n",
-      "python-dateutil          2.8.2\r\n",
-      "python-speech-features   0.6\r\n",
-      "pytz                     2021.3\r\n",
-      "PyYAML                   6.0\r\n",
-      "pyzmq                    22.3.0\r\n",
-      "qtconsole                5.3.0\r\n",
-      "QtPy                     2.0.1\r\n",
-      "regex                    2022.4.24\r\n",
-      "requests                 2.27.1\r\n",
-      "requests-oauthlib        1.3.1\r\n",
-      "resampy                  0.3.1\r\n",
-      "rsa                      4.8\r\n",
-      "ruamel-yaml-conda        0.15.80\r\n",
-      "scikit-learn             1.0.2\r\n",
-      "scipy                    1.7.3\r\n",
-      "seaborn                  0.11.2\r\n",
-      "Send2Trash               1.8.0\r\n",
-      "setuptools               60.10.0\r\n",
-      "six                      1.15.0\r\n",
-      "smart-open               6.0.0\r\n",
-      "SoundFile                0.10.3.post1\r\n",
-      "soupsieve                2.3.1\r\n",
-      "stack-data               0.2.0\r\n",
-      "statsmodels              0.13.2\r\n",
-      "tenacity                 8.0.1\r\n",
-      "tensorboard              2.8.0\r\n",
-      "tensorboard-data-server  0.6.1\r\n",
-      "tensorboard-plugin-wit   1.8.1\r\n",
-      "tensorflow-datasets      4.5.2\r\n",
-      "tensorflow-macos         2.8.0\r\n",
-      "tensorflow-metadata      1.7.0\r\n",
-      "tensorflow-metal         0.5.0\r\n",
-      "termcolor                1.1.0\r\n",
-      "terminado                0.13.1\r\n",
-      "testpath                 0.5.0\r\n",
-      "tf-estimator-nightly     2.8.0.dev2021122109\r\n",
-      "threadpoolctl            2.2.0\r\n",
-      "torch                    1.10.2\r\n",
-      "tornado                  6.1\r\n",
-      "tqdm                     4.63.0\r\n",
-      "traitlets                5.1.1\r\n",
-      "typing_extensions        4.2.0\r\n",
-      "urllib3                  1.26.9\r\n",
-      "wcwidth                  0.2.5\r\n",
-      "webencodings             0.5.1\r\n",
-      "Werkzeug                 2.1.1\r\n",
-      "wheel                    0.37.1\r\n",
-      "widgetsnbextension       3.5.2\r\n",
-      "wrapt                    1.14.0\r\n",
-      "zipp                     3.8.0\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!{sys.executable} -m pip list"
+    "from IPython.display import Audio\n",
+    "from data_generator import vis_train_features, plot_raw_audio\n",
+    "from IPython.display import Markdown, display\n",
+    "import json\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import soundfile as sf\n",
+    "import miniaudio\n",
+    "import array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -326,11 +151,13 @@
        " 'AU': 'AU (Sun/NeXT)',\n",
        " 'AVR': 'AVR (Audio Visual Research)',\n",
        " 'CAF': 'CAF (Apple Core Audio File)',\n",
+       " 'FLAC': 'FLAC (Free Lossless Audio Codec)',\n",
        " 'HTK': 'HTK (HMM Tool Kit)',\n",
        " 'SVX': 'IFF (Amiga IFF/SVX8/SV16)',\n",
        " 'MAT4': 'MAT4 (GNU Octave 2.0 / Matlab 4.2)',\n",
        " 'MAT5': 'MAT5 (GNU Octave 2.1 / Matlab 5.0)',\n",
        " 'MPC2K': 'MPC (Akai MPC 2k)',\n",
+       " 'OGG': 'OGG (OGG Container format)',\n",
        " 'PAF': 'PAF (Ensoniq PARIS)',\n",
        " 'PVF': 'PVF (Portable Voice Format)',\n",
        " 'RAW': 'RAW (header-less)',\n",
@@ -347,7 +174,7 @@
        " 'XI': 'XI (FastTracker 2)'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,57 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'PCM_S8': 'Signed 8 bit PCM',\n",
-       " 'PCM_16': 'Signed 16 bit PCM',\n",
-       " 'PCM_24': 'Signed 24 bit PCM',\n",
-       " 'PCM_32': 'Signed 32 bit PCM',\n",
-       " 'PCM_U8': 'Unsigned 8 bit PCM',\n",
-       " 'FLOAT': '32 bit float',\n",
-       " 'DOUBLE': '64 bit float',\n",
-       " 'ULAW': 'U-Law',\n",
-       " 'ALAW': 'A-Law',\n",
-       " 'IMA_ADPCM': 'IMA ADPCM',\n",
-       " 'MS_ADPCM': 'Microsoft ADPCM',\n",
-       " 'GSM610': 'GSM 6.10',\n",
-       " 'G721_32': '32kbs G721 ADPCM',\n",
-       " 'G723_24': '24kbs G723 ADPCM',\n",
-       " 'DWVW_12': '12 bit DWVW',\n",
-       " 'DWVW_16': '16 bit DWVW',\n",
-       " 'DWVW_24': '24 bit DWVW',\n",
-       " 'VOX_ADPCM': 'VOX ADPCM',\n",
-       " 'DPCM_16': '16 bit DPCM',\n",
-       " 'DPCM_8': '8 bit DPCM',\n",
-       " 'ALAC_16': '16 bit ALAC',\n",
-       " 'ALAC_20': '20 bit ALAC',\n",
-       " 'ALAC_24': '24 bit ALAC',\n",
-       " 'ALAC_32': '32 bit ALAC'}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sf.available_subtypes()#format='FLAC')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/libsndfile.dylib\n"
+      "/Users/carlosarocha/miniconda3/envs/nlp-asr/bin/../lib/libsndfile.dylib\n"
      ]
     }
    ],
@@ -431,11 +215,6 @@
    ],
    "source": [
     "# Let's convert all flac files to wav files:\n",
-    "import os\n",
-    "import numpy as np\n",
-    "import soundfile as sf\n",
-    "import miniaudio\n",
-    "import array\n",
     "\n",
     "def play_back_file(filename):\n",
     "    stream = miniaudio.stream_file(filename)\n",
@@ -1385,7 +1164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
